luci-theme-bootstrap: fix cbi-value caption alignment
Since the removal of the clearfix styles, overlong captions will displace
subsequent input field rows.

Fix the issue by replace floating label + field margin with flexbox styles.

Fixes: #5535
Fixes: 8055acc9be ("luci-theme-bootstrap: overhaul styles")
(cherry picked from commit 4720a025e8ab5a28541f7d066fb9b2f35ddb2cb1)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/mobile.css
@@ -161,6 +161,11 @@ header h3 a, header .brand {
 		padding-bottom: .5em;
 		border-bottom: 1px solid var(--border-color-high);
 		margin-bottom: .5em;
+		display: block;
+	}
+
+	.cbi-value.hidden {
+		display: none;
 	}
 
 	.cbi-value .cbi-value:last-child {
@@ -170,7 +175,6 @@ header h3 a, header .brand {
 	}
 
 	.cbi-value label.cbi-value-title {
-		float: none;
 		font-weight: bold;
 	}
 
